# Team-Z

./: .env  .env.example  .gitignore  API_CONTRACT.md  API_CONTRACTS.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: index.py
backend/: .env.example  pyproject.toml  run.py
backend/frontend_streamlit/: app.py
backend/src/backend/: database.py  main.py  pyproject.toml
backend/src/backend/api/: deps.py  routes_categories.py  routes_certifications.py  routes_cities.py  routes_contact.py  routes_education.py  routes_experiences.py  routes_hobbies.py  routes_personal_infos.py  routes_portfolio.py  routes_projects.py  routes_reco.py  routes_reviews.py  routes_technologies.py
backend/src/backend/core/: config.py
backend/src/backend/database/: __init__.py  mongo_handler.py  neo4j_handler.py
backend/src/backend/db/: mongo.py  neo4j.py  postgres.py
backend/src/backend/models/: __init__.py  common.py  portfolio_entities.py  project.py  schemas.py
backend/src/backend/repositories/: mongo_portfolio_repo.py  mongo_repo.py  neo4j_repo.py  postgres_repo.py
backend/src/backend/routers/: __init__.py  experiences.py  profile.py  projects.py  skills.py
backend/src/backend/scripts/: seed_all.py  seed_portfolio.py
backend/src/backend/services/: __init__.py  city_service.py  portfolio_service.py  recommendation_service.py  review_service.py
backend/src/backend/shared/: pyproject.toml
backend/src/backend/shared/src/: schemas.py
backend/src/scripts/: main.py  scraper.py  seed_all.py
datasets/: categories.json  certifications.json  certifications.jsonl  contacts.json  education.json  experience.jsonl  experiences.json  hobbies.json  hobbies.jsonl  infos.jsonl  infos_personnels.jsonl  parcours_scolaire.jsonl  projects.json  projets.jsonl  skills.jsonl  technologies.json  technologies.jsonl
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend_react/: README.md  package-lock.json  package.json  vite.config.js
frontend_streamlit/: README.md  streamlit_app.py
(+7 files in other folders)
