[project]
name = "backend"
version = "0.1.0"
description = "Portfolio API — Backend (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "motor>=3.3",
    "neo4j>=5.15",
    "email-validator>=1.3",
    "python-dotenv>=1.0",
    "shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
