[project]
name = "backend"
version = "0.1.0"
description = "Portfolio Data-Driven — API Backend (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "motor>=3.3",
    "pymongo>=4.6",
    "neo4j>=5.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
