[project]
name = "team-z"
version = "0.1.0"
description = "Portfolio — Monorepo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backend",
    "shared",
]

[tool.uv.sources]
backend = { path = "./backend", editable = true }
shared = { path = "./shared", editable = true }

[project.scripts]
app = "backend.src.backend.app:app"

[tool.vercel.scripts]
build = "python backend\build.py"